[gd_scene load_steps=11 format=3 uid="uid://dg5m686pi1otk"]

[ext_resource type="Script" path="res://Scripts/mini_game/Firewall/start_scen.gd" id="1_3t7ji"]
[ext_resource type="Texture2D" uid="uid://cpq3qdfhjjbes" path="res://assets/World Files/Warped City/V1/warped city files/ENVIRONMENT/background/skyline-a.png" id="2_ylw27"]
[ext_resource type="FontFile" uid="uid://dmujmael4nlo1" path="res://assets/Fonts/Vermin Vibes 1989.ttf" id="3_auorm"]
[ext_resource type="FontFile" uid="uid://y8cdy6s8ygda" path="res://assets/Fonts/m42.TTF" id="4_30nbe"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5q6sv"]
texture = ExtResource("2_ylw27")
modulate_color = Color(0.750489, 0.750489, 0.750489, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjsua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3snf5"]
bg_color = Color(0.0779327, 0.469171, 0.369016, 1)
skew = Vector2(1, 0)
border_width_left = 7
border_width_top = 9
border_width_right = 9
border_width_bottom = 7
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jecxl"]
bg_color = Color(1, 0.831373, 0.290196, 1)
skew = Vector2(1, 0)
border_width_left = 7
border_width_top = 9
border_width_right = 9
border_width_bottom = 7
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smk4a"]
bg_color = Color(0, 1, 0.966667, 1)
skew = Vector2(1, 0)
border_width_left = 7
border_width_top = 9
border_width_right = 9
border_width_bottom = 7
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vjk8e"]
modulate_color = Color(0.496337, 0.496337, 0.496337, 1)

[node name="Start_fire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3t7ji")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_5q6sv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -153.0
offset_right = 263.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="play_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_auorm")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjsua")
theme_override_styles/hover = SubResource("StyleBoxFlat_3snf5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jecxl")
theme_override_styles/normal = SubResource("StyleBoxFlat_smk4a")
text = "PLAY"

[node name="credit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_auorm")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjsua")
theme_override_styles/hover = SubResource("StyleBoxFlat_3snf5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jecxl")
theme_override_styles/normal = SubResource("StyleBoxFlat_smk4a")
text = "CREDITS"

[node name="exit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_auorm")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_xjsua")
theme_override_styles/hover = SubResource("StyleBoxFlat_3snf5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jecxl")
theme_override_styles/normal = SubResource("StyleBoxFlat_smk4a")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = -418.0
offset_right = 251.0
offset_bottom = -328.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.616573, 0.616573, 0.616573, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 8
theme_override_fonts/font = ExtResource("4_30nbe")
theme_override_font_sizes/font_size = 116
theme_override_styles/normal = SubResource("StyleBoxTexture_vjk8e")
text = "JIVAN"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/play_button" to="." method="play_button"]
[connection signal="pressed" from="VBoxContainer/credit_button" to="." method="credit_button"]
[connection signal="pressed" from="VBoxContainer/exit_button" to="." method="exit_button"]
